More changes to grammar and some improvements on generation chapter

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -30,6 +30,9 @@ Das funktioniert natürlich nur über das implementierte Programm und liefert ke
 
 %-----------
 \section{GUI}
+\label{gui}
+
+Welche Eingaben sind möglich?\\
 
 \todo{Funktionen beschreiben + wie verknüpft mit Programm}
 JavaView zum anzeigen für groben Überblick (Lizenz checken)
