--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -108,15 +108,14 @@ Wenn zwei Symbole direkt aufeinander folgen, so bedeutet das, dass das linke Ele
 \section{Quantil-Quantil-Diagramme} 
 \label{qqdiagrams}
 
-Quantil-Quantil-Diagramme sind eine grafische Methode um zu testen, ob eine Menge von Stichproben eine bestimmte Verteilung hat. 
-Seien nun $x_1, x_2,\dots, x_n$ die Stichproben und $F$ die Verteilungsfunktion derjenigen Verteilung, gegen die getestet werden soll. Die Verteilungsfunktion gibt für einen Wert $x$ an, wie groß die Wahrscheinlichkeit ist das die Zufallsvariable einen Wert $\leq x$ annimmt. Zunächst werden die Stichproben aufsteigen sortiert, was $x_{(1)}, x_{(2)},\dots, x_{(n)}$ ergibt. Dann sollte
-\[ F(x_{(i)}) \approx \frac{i}{n} \]
-gelten, da $i$ Werte $\leq x_{(i)}$ beobachtet wurden. Die geschätzte Wahrscheinlichkeit dafür mit der beobachteten Verteilung einen Wert $\leq x_{(i)}$ zu erzeugen ist $\frac{i}{n}$ bei hinreichend großem $n$. Es gilt also
-\[ x_{(i)} \approx F^{-1}\left(\frac{i}{n}\right), \]
-wobei $F^{-1}$ die inverse Verteilungsfunktion ist. Sie gibt für einen Wert $y$ den kleinsten Wert $x$ an, für den gilt, dass $F(x) > y$, also das $y$-Quantil.
-Trägt man nun die sortierten Stichproben gegen die entsprechenden Quantile in ein Diagramm ab, und die angenommene Verteilung ist korrekt, so liegen die Punkte annähernd auf einer Geraden mit Steigung $1$ durch den Ursprung. \cite[Kapitel 1 und 2]{QQPlots}
+Quantil-Quantil-Diagramme sind eine grafische Methode um zu testen, ob eine Stichprobe einer bestimmten Verteilung unterliegt. \\
+Seien $x_1, x_2,\dots, x_n$ die Elemente einer Stichprobe und $F$ die Verteilungsfunktion derjenigen Verteilung, gegen die getestet werden soll. Die Verteilungsfunktion gibt für einen Wert $x$ an, wie groß die Wahrscheinlichkeit ist, dass die Zufallsvariable einen Wert $\leq x$ annimmt.\\
+Nun werden die empirischen Quantile der Stichprobe mit den entsprechenden Quantilen von $F$ verglichen. Dazu wird die Stichprobe aufsteigend sortiert, was $x_{(1)}, x_{(2)},\dots, x_{(n)}$ ergibt. 
+Das empirische $\frac{i}{n}$-Quantil der Stichprobe ist $x_{(i)}$, da $i$ Werte $\leq x_{(i)}$ beobachtet wurden. Die inverse Verteilungsfunktion gibt für einen Wert $y$ den kleinsten Wert $x$ an, für den gilt, dass $F(x) > y$, also das $y$-Quantil. Das $\frac{i}{n}$-Quantil von $F$ ist also $F^{-1}\left(\frac{i}{n}\right)$.
 
-Den Werten $x_{(i)}$ einfach das $\frac{i}{n}$-Quantil zuzuordnen ist insofern schwierig, als dass es suggeriert, dass alle Werte, die mit der angenommenen Verteilung generiert werden, kleiner als $x_{(n)}$ sind. Deshalb gibt es verschiedene andere Möglichkeiten die Quantile zuzuordnen. Sie liefern aber für $n \rightarrow \infty$ alle das gleiche Ergebnis. Sogenannte "`Rankit Plots"' verwenden folgende Zuordnung:
+Trägt man nun die sortierte Stichprobe gegen die entsprechenden Quantile in ein Diagramm ab, und die angenommene Verteilung ist korrekt, so liegen die Punkte annähernd auf einer Geraden mit Steigung $1$ durch den Ursprung. \cite[Kapitel 1 und 2]{QQPlots}
+
+Den Werten $x_{(i)}$ einfach das $\frac{i}{n}$-Quantil zuzuordnen ist aber insofern schwierig, als dass es suggeriert, dass alle Werte, die mit der angenommenen Verteilung generiert werden, kleiner als $x_{(n)}$ sind. Deshalb gibt es verschiedene andere Möglichkeiten die Quantile zuzuordnen. Sie liefern aber für $n \rightarrow \infty$ alle das gleiche Ergebnis. Sogenannte "`Rankit Plots"' verwenden folgende Zuordnung:
 \[ x_{(i)} \approx F^{-1}\left(\frac{i - 0,5}{n}\right). \]
 Diese Zuordnung wird auch in dieser Arbeit verwendet.
 
